Use new contants. Remove use of Guava